horizontal scroll fixed on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     color: #2C2C2C;
+    border: 1px solid red;
 }
 
 body{
@@ -95,14 +96,15 @@ footer {
 
 @media screen and (max-width:600px) {
     body{
-        width: auto;
+        overflow-x: hidden;
+        width: 90%;
         height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
         height: calc(var(--vh, 1vh) * 100);
         justify-content: space-between;
     }
 
     header {
-        width: 100%;
+        
         margin-top: 10px;
         display: flex;
         flex-direction: column;
@@ -111,7 +113,7 @@ footer {
     
     .logo, .contacts {
         height: auto;
-        width:100%;
+        
         display: flex;
         align-items: center;
         padding:10px;
@@ -146,19 +148,18 @@ footer {
         display: flex;
         align-items: start;
         justify-content: flex-start;
-        width: 100%;
-        padding-left: 30px;
+        width:auto;
     }
 
     .content h1 {
         font-size: 26px;
-        max-width:100%;
+        
     }
     
     .content p {
         margin-top: 20px;
         font-size: 14px;
-        max-width:100%;
+        
     }
 
     .content li {
